# cellular-automata

./: README.md  pyproject.toml
cellular_automata/: __init__.py  cellular_automata.py
cellular_automata/game_of_life/: __init__.py  cellular_automata.py  game_of_life.py
cellular_automata/physics_simulation/: field.py  particles.py
